--- a/belajar_link/link.html
+++ b/belajar_link/link.html
@@ -7,7 +7,7 @@
     <title>Belajar Link</title>
 </head>
 <body>
-    <h2>Belajar LINK HTML</h2>
+    <h2>Belajar LINK HTML BARU</h2>
     <ul>
         <li><a href="hello.html">HELLO</a></li>
         <li><a href="pzn/index.html">PZN</a></li>
